stopped overflowing project titles

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@
 }
 html {
     --primary: rgb(59, 59, 59);
+    min-width: 930px;
 }
 body {
     background: rgb(238, 238, 238);
@@ -94,6 +95,7 @@ h4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 300px;
 }
 .project:hover {
     background-color: rgb(201, 201, 201);
@@ -102,6 +104,8 @@ h4 {
 .project-title {
     font-size: 3rem;
     color: var(--primary);
+    overflow-x: hidden;
+    width: 900px;
 }
 
 .projects-add,
@@ -147,7 +151,7 @@ h4 {
 }
 
 .task {
-    width: 70%;
+    width: 80%;
     display: flex;
     border-radius: 30px;
     height: 50px;
@@ -155,7 +159,7 @@ h4 {
     align-items: center;
     justify-content: space-between;
     border-bottom: 2px solid rgb(215, 215, 215);
-    margin-left: 50px;
+    margin-left: 30px;
 }
 .task:hover {
     background: rgb(201, 201, 201);
@@ -206,6 +210,7 @@ h4 {
     background: none;
     border: none;
     font-weight: bold;
+    width: 80%;
 }
 
 .tasks-container {
@@ -240,4 +245,9 @@ h4 {
     padding: 40px 0;
     position: relative;
     border: 5px solid var(--primary);
+}
+
+.project-tab-name {
+    overflow-x: hidden;
+    width: 80%;
 }
